@@ -72,3 +72,27 @@ The `install_github()` approach requires that you build from source, i.e. `make`
 * zlib, zlib License, 1995-2015, Jean-loup Gailly and Mark Adler
 * LZ4, BSD 2-clause License, 2011-2015, Yann Collet
 * [README](./inst/COPYRIGHTS)
+
+
+## GDS Command-line Tools
+
+`viewgds` is a shell script written in R ([viewgds.R](https://github.com/zhengxwen/Documents/blob/master/Program/viewgds.R)), to view the contents of a GDS file. The R packages `gdsfmt`, `getopt` and `optparse` should be installed before running `viewgds`, and the package `crayon` is optional.
+
+```R
+install.packages("getopt", repos="http://cran.r-project.org")
+install.packages("optparse", repos="http://cran.r-project.org")
+install.packages("crayon", repos="http://cran.r-project.org")
+
+source("http://bioconductor.org/biocLite.R")
+biocLite("gdsfmt")
+```
+
+```sh
+## download
+wget --no-check-certificate https://raw.githubusercontent.com/zhengxwen/Documents/master/Program/viewgds.R -O viewgds
+## or (on mac)
+curl -L https://raw.githubusercontent.com/zhengxwen/Documents/master/Program/viewgds.R -o viewgds
+
+## make it executable
+chmod +x viewgds
+```
